// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipe() should return the first met error in pipe chain of validators 1`] = `
Object {
  "message": "Test",
  "path": Array [],
  "type": "single",
  "value": 1,
}
`;

exports[`pipe() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "type": "single",
  "value": 1,
}
`;
